Fix framebuffer, Innolux AT070TN90 LCD and PVR ram defines

--- a/arch/arm/configs/dropad_defconfig
+++ b/arch/arm/configs/dropad_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Sat May  7 13:53:38 2011
+# Sun May  8 00:49:48 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1495,7 +1495,10 @@ CONFIG_BACKLIGHT_PWM=y
 #
 # CONFIG_DISPLAY_SUPPORT is not set
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
-# CONFIG_LOGO is not set
+CONFIG_LOGO=y
+# CONFIG_LOGO_LINUX_MONO is not set
+CONFIG_LOGO_LINUX_VGA16=y
+# CONFIG_LOGO_LINUX_CLUT224 is not set
 CONFIG_SOUND=y
 CONFIG_SOUND_OSS_CORE=y
 CONFIG_SOUND_OSS_CORE_PRECLAIM=y
