Revert 067adbcb8596763a953b and re-do it properly.

--- a/arch/arm/configs/dropad_defconfig
+++ b/arch/arm/configs/dropad_defconfig
@@ -1468,10 +1468,11 @@ CONFIG_FB_S3C_LCD_INIT=y
 CONFIG_FB_S3C_DEFAULT_WINDOW=2
 CONFIG_FB_S3C_NR_BUFFERS=2
 # CONFIG_FB_S3C_VIRTUAL is not set
+CONFIG_FB_S3C_AT070TN90=y
 # CONFIG_FB_S3C_LTE480WV is not set
 # CONFIG_FB_S3C_HT101HD1 is not set
 # CONFIG_FB_S3C_LTN101NT05 is not set
-CONFIG_FB_S3C_LB070WV6=y
+# CONFIG_FB_S3C_LB070WV6 is not set
 # CONFIG_FB_S3C_TL2796 is not set
 # CONFIG_FB_S3C_LVDS is not set
 # CONFIG_FB_S3C_AMS701KA is not set
