--- a/drivers/video/samsung/Makefile
+++ b/drivers/video/samsung/Makefile
@@ -6,6 +6,7 @@ ifeq ($(CONFIG_FB_S3C),y)
 obj-y				+= s3cfb.o
 obj-$(CONFIG_ARCH_S5PV210)	+= s3cfb_fimd6x.o
 
+obj-$(CONFIG_FB_S3C_AT070TN90)  += s3cfb_at070tn90.o
 obj-$(CONFIG_FB_S3C_LTN101NT05)	+= s3cfb_ltn101nt05.o
 obj-$(CONFIG_FB_S3C_LB070WV6)	+= s3cfb_lb070wv6.o
 obj-$(CONFIG_FB_S3C_LTE480WV)	+= s3cfb_lte480wv.o
