--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -144,6 +144,10 @@ config TOUCHSCREEN_S3C
           To compile this driver as a module, choose M here: the
           module will be called s3c_ts.
 
+config TOUCHSCREEN_S3C_DEBUG
+	bool "Debug S3C touchscreen driver"
+	depends on TOUCHSCREEN_S3C
+
 config TOUCHSCREEN_NEW
         bool "new flip touch"
         depends on TOUCHSCREEN_S3C
