--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -908,6 +908,14 @@ config USB_ANDROID_ADB
 	help
 	  Provides adb function for android gadget driver.
 
+config USB_ANDROID_TIX
+	boolean "Adroid gadget tix function (proprietary)
+	depends on USB_ANDROID
+	help
+		Provides TiX function for android gadget driver. TiX is a 
+		proprietary function by Ergotest Innovation as, Norway for 
+		communication with Ergotest peripheral devices
+
 config USB_ANDROID_MASS_STORAGE
 	boolean "Android gadget mass storage function"
 	depends on USB_ANDROID && SWITCH
