--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -54,6 +54,33 @@ config TOUCHSCREEN_AD7877
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called ad7877.
+	  
+config TOUCHSCREEN_TF5X0X
+	tristate "FocalTech tf5x0x touchscreen"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you have the FocalTech ft5x0x touchscreen.
+
+	  If unsure, say N.
+	  
+config TOUCHSCREEN_TF5X06
+	tristate "FocalTech tf5x06 touchscreen"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you have the FocalTech ft5x06 touchscreen.
+
+	  If unsure, say N.
+	  
+config TOUCHSCREEN_TF5406
+	tristate "FocalTech tf5406 touchscreen"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you have the FocalTech ft5406 touchscreen.
+
+	  If unsure, say N.
 
 config TOUCHSCREEN_AD7879_I2C
 	tristate "AD7879 based touchscreens: AD7879-1 I2C Interface"
