--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -6,6 +6,10 @@
 
 wm97xx-ts-y := wm97xx-core.o
 
+
+obj-$(CONFIG_TOUCHSCREEN_TF5X0X)	+= tf5x0x_ts.o
+obj-$(CONFIG_TOUCHSCREEN_TF5X06)	+= tf5x06_ts.o
+obj-$(CONFIG_TOUCHSCREEN_TF5406)	+= tf5406_ts.o
 obj-$(CONFIG_TOUCHSCREEN_88PM860X)	+= 88pm860x-ts.o
 obj-$(CONFIG_TOUCHSCREEN_AD7877)	+= ad7877.o
 obj-$(CONFIG_TOUCHSCREEN_AD7879)	+= ad7879.o
