--- a/arch/arm/configs/dropad_defconfig
+++ b/arch/arm/configs/dropad_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Sun May  8 00:49:48 2011
+# Fri Jun 10 00:51:12 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -269,7 +269,7 @@ CONFIG_S5P_GPIO_DRVSTR=y
 CONFIG_SAMSUNG_GPIO_EXTRA=0
 CONFIG_S3C_GPIO_SPACE=0
 CONFIG_S3C_GPIO_TRACK=y
-# CONFIG_S3C_ADC is not set
+CONFIG_S3C_ADC=y
 CONFIG_S3C_DEV_HSMMC=y
 CONFIG_S3C_DEV_HSMMC1=y
 CONFIG_S3C_DEV_HSMMC2=y
@@ -315,7 +315,8 @@ CONFIG_MACH_MANGO210=y
 # CONFIG_MACH_SMDKC110 is not set
 # CONFIG_MACH_HERRING is not set
 CONFIG_S5PV210_SETUP_FB=y
-# CONFIG_S5P_ADC is not set
+CONFIG_S5P_ADC=y
+# CONFIG_TOUCHSCREEN_USEAD1 is not set
 CONFIG_S5PV210_SETUP_FIMC0=y
 CONFIG_S5PV210_SETUP_FIMC1=y
 CONFIG_S5PV210_SETUP_FIMC2=y
@@ -818,6 +819,7 @@ CONFIG_MTD_NAND=y
 CONFIG_MTD_NAND_S3C=y
 # CONFIG_MTD_NAND_S3C_DEBUG is not set
 CONFIG_MTD_NAND_S3C_HWECC=y
+CONFIG_MTD_NAND_S3C_DROPAD=y
 # CONFIG_MTD_NAND_DISKONCHIP is not set
 # CONFIG_MTD_NAND_NANDSIM is not set
 # CONFIG_MTD_NAND_PLATFORM is not set
@@ -1093,11 +1095,16 @@ CONFIG_VD5376_SINGLE_MODE=y
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+# CONFIG_TOUCHSCREEN_FT5X0X is not set
+CONFIG_TOUCHSCREEN_FT5X06=y
+# CONFIG_TOUCHSCREEN_FT5406 is not set
+CONFIG_FT5X0X_MULTITOUCH=y
 # CONFIG_TOUCHSCREEN_AD7879_I2C is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 CONFIG_TOUCHSCREEN_S3C=y
+# CONFIG_TOUCHSCREEN_S3C_DEBUG is not set
 # CONFIG_TOUCHSCREEN_NEW is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
@@ -1120,6 +1127,7 @@ CONFIG_TOUCHSCREEN_S3C=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_GYRO_K3G is not set
+# CONFIG_INPUT_MMA7660 is not set
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -1468,11 +1476,12 @@ CONFIG_FB_S3C_LCD_INIT=y
 CONFIG_FB_S3C_DEFAULT_WINDOW=2
 CONFIG_FB_S3C_NR_BUFFERS=2
 # CONFIG_FB_S3C_VIRTUAL is not set
-CONFIG_FB_S3C_AT070TN90=y
 # CONFIG_FB_S3C_LTE480WV is not set
 # CONFIG_FB_S3C_HT101HD1 is not set
 # CONFIG_FB_S3C_LTN101NT05 is not set
 # CONFIG_FB_S3C_LB070WV6 is not set
+# CONFIG_FB_S3C_UTLCD7B is not set
+CONFIG_FB_S3C_AT070TN90=y
 # CONFIG_FB_S3C_TL2796 is not set
 # CONFIG_FB_S3C_LVDS is not set
 # CONFIG_FB_S3C_AMS701KA is not set
@@ -1533,55 +1542,10 @@ CONFIG_SND_S5PC1XX_SOC_I2S=y
 CONFIG_SND_S5P_SOC_WM8960=y
 CONFIG_SND_S5P_WM8960=y
 # CONFIG_SND_S5P_WM8994 is not set
+# CONFIG_SND_SOC_SMDK_WM9713 is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
-CONFIG_SND_SOC_ALL_CODECS=y
-CONFIG_SND_SOC_WM_HUBS=y
-CONFIG_SND_SOC_AD193X=y
-CONFIG_SND_SOC_AD73311=y
-CONFIG_SND_SOC_ADS117X=y
-CONFIG_SND_SOC_AK4535=y
-CONFIG_SND_SOC_AK4642=y
-CONFIG_SND_SOC_AK4671=y
-CONFIG_SND_SOC_CS4270=y
-CONFIG_SND_SOC_DA7210=y
-CONFIG_SND_SOC_L3=y
-CONFIG_SND_SOC_PCM3008=y
-CONFIG_SND_SOC_SPDIF=y
-CONFIG_SND_SOC_SSM2602=y
-CONFIG_SND_SOC_TLV320AIC23=y
-CONFIG_SND_SOC_TLV320AIC3X=y
-CONFIG_SND_SOC_TLV320DAC33=y
-CONFIG_SND_SOC_UDA134X=y
-CONFIG_SND_SOC_UDA1380=y
-CONFIG_SND_SOC_WM8510=y
-CONFIG_SND_SOC_WM8523=y
-CONFIG_SND_SOC_WM8580=y
-CONFIG_SND_SOC_WM8711=y
-CONFIG_SND_SOC_WM8727=y
-CONFIG_SND_SOC_WM8728=y
-CONFIG_SND_SOC_WM8731=y
-CONFIG_SND_SOC_WM8750=y
-CONFIG_SND_SOC_WM8753=y
-CONFIG_SND_SOC_WM8776=y
-CONFIG_SND_SOC_WM8900=y
-CONFIG_SND_SOC_WM8903=y
-CONFIG_SND_SOC_WM8904=y
-CONFIG_SND_SOC_WM8940=y
-CONFIG_SND_SOC_WM8955=y
+# CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WM8960=y
-CONFIG_SND_SOC_WM8961=y
-CONFIG_SND_SOC_WM8971=y
-CONFIG_SND_SOC_WM8974=y
-CONFIG_SND_SOC_WM8978=y
-CONFIG_SND_SOC_WM8988=y
-CONFIG_SND_SOC_WM8990=y
-CONFIG_SND_SOC_WM8993=y
-CONFIG_SND_SOC_WM8994=y
-CONFIG_SND_SOC_WM9081=y
-CONFIG_SND_SOC_MAX9877=y
-CONFIG_SND_SOC_TPA6130A2=y
-CONFIG_SND_SOC_WM2000=y
-CONFIG_SND_SOC_WM9090=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
