--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -7,9 +7,9 @@
 wm97xx-ts-y := wm97xx-core.o
 
 
-obj-$(CONFIG_TOUCHSCREEN_TF5X0X)	+= tf5x0x_ts.o
-obj-$(CONFIG_TOUCHSCREEN_TF5X06)	+= tf5x06_ts.o
-obj-$(CONFIG_TOUCHSCREEN_TF5406)	+= tf5406_ts.o
+obj-$(CONFIG_TOUCHSCREEN_FT5X0X)	+= ft5x0x_ts.o
+obj-$(CONFIG_TOUCHSCREEN_FT5X06)	+= ft5x06_ts.o
+obj-$(CONFIG_TOUCHSCREEN_FT5406)	+= ft5406_ts.o
 obj-$(CONFIG_TOUCHSCREEN_88PM860X)	+= 88pm860x-ts.o
 obj-$(CONFIG_TOUCHSCREEN_AD7877)	+= ad7877.o
 obj-$(CONFIG_TOUCHSCREEN_AD7879)	+= ad7879.o
